--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
     <link rel="stylesheet" href="./style.css">
   </head>
 
-<body>
-<div class="aaa">
-  <img src="./eisenhower-matrix.jpg">
-  <a class="more_inf" 
-      href="https://goal-life.com/page/method/matrix-eisenhower">
-      Want more details?
-  </a>
-</div>
-<div class="centered-main-page-element">
-  <p id="topSectionForAddingElementToList">
-    <label for="new-task">Add Item</label>
-    <div class="task-row-wrapper">
-      <input id="new-task" class="task" type="text">
-      <button>Add</button>
+  <body>
+    <header class="aaa">
+      <img src="./eisenhower-matrix.jpg" alt="Image of Eisenhower Matrix">
+      <a class="more_inf" 
+          href="https://goal-life.com/page/method/matrix-eisenhower">
+          Want more details?
+      </a>
+    </header>
+
+    <div class="centered-main-page-element">
+      <p id="topSectionForAddingElementToList">
+      <label for="new-task">Add Item</label>
+      <div class="task-row-wrapper">
+        <input id="new-task" class="task" type="text">
+        <button>Add</button>
     </div>
-  </p>
+    </p>
 
 <h3>Todo</h3>
 <ul id="incompleteTasks">
@@ -33,7 +34,7 @@
   <input type="text" class="task">
   <button class="edit">Edit</button>
   <button class="delete">
-    <img src="./remove.svg">
+    <img src="./remove.svg" alt="">
   </button>
 </li>
 <li class="editMode">
@@ -53,7 +54,7 @@
     <input type="text" class="task">
     <button class="edit">Edit</button>
     <button class="delete">
-      <img src="./remove.svg">
+      <img src="./remove.svg" alt="">
     </button>
   </li>
 </ul>
