--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
   </head>
 
-  <body>
+  <body class="page">
     <header class="header">
       <img class="header__image" 
           src="./eisenhower-matrix.jpg" 
@@ -21,50 +21,60 @@
 
     <main class="main">
 
+     <!--ADD-->
+
       <section class="section section__add">
         <h3 class="section__title">Add Item</h3>
         
-        <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
-          <button>Add</button>
+        <div class="block__add-task">
+          <input id="input__new-task" class="input input__task" type="text">
+          <button id="button__add" class="button button__add">Add</button>
         </div>
       </section>
+
+      <!--TODO-->
 
       <section class="section section__todo">
         <h3 class="section__title">Todo</h3>
 
-        <ul id="incompleteTasks">
-          <li>
-            <input type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete">
+        <ul id="todo-tasks" class="list">
+          <li class="list__item">
+            <input class="item__checkbox" type="checkbox">
+            <label class="item__name task">Pay Bills</label>
+            <input class="item__input input" type="text" >
+
+            <button class="button button__edit edit">Edit</button>
+            <button class="button button__delete delete">
               <img src="./remove.svg" alt="">
             </button>
           </li>
 
-          <li class="editMode">
-            <input type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="edit">Save</button>
-            <button class="delete">
-              <img src="./remove.svg">
+          <li class="list__item edit-mode">
+            <input class="item__checkbox" type="checkbox">
+            <label class="item__name task">Go Shopping</label>
+            <input class="item__input input task" value="Go Shopping" type="text">
+
+            <button class="button button__edit edit">Save</button>
+            <button class="button button__delete delete">
+              <img src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
       </section>
 
-      <section class="section">
+      <!--COMPLETED-->
+
+      <section class="section section__completed">
         <h3 class="section__title">Completed</h3>
-        
-        <ul id="completed-tasks">
-          <li><input type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete">
+
+        <ul id="completed-tasks" class="list">
+          <li class="list__item">
+            <input class="item__checkbox" type="checkbox" checked>
+            <label class="item__name task">See the Doctor</label>
+            <input class="item__input input task" type="text">
+
+            <button class="button button__edit edit">Edit</button>
+            <button class="button button__delete delete">
               <img src="./remove.svg" alt="">
             </button>
           </li>
@@ -73,6 +83,6 @@
 
     </main>
 
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
