refactor(extended-3.3): add short names for classes and ids

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <h3 class="section__title">Add Item</h3>
         
         <div class="block__add-task">
-          <input id="input__new-task" class="input input__task" type="text">
-          <button id="button__add" class="button button__add">Add</button>
+          <input id="input__new-task" class="input task" type="text">
+          <button id="button--add" class="button button--add">Add</button>
         </div>
       </section>
 
@@ -41,11 +41,11 @@
           <li class="list__item">
             <input class="item__checkbox" type="checkbox">
             <label class="item__name task">Pay Bills</label>
-            <input class="item__input input" type="text" >
+            <input class="item__input input task" type="text" >
 
-            <button class="button button__edit edit">Edit</button>
-            <button class="button button__delete delete">
-              <img src="./remove.svg" alt="">
+            <button class="button button--edit">Edit</button>
+            <button class="button button--delete">
+              <img class="button__img" src="./remove.svg" alt="">
             </button>
           </li>
 
@@ -54,9 +54,9 @@
             <label class="item__name task">Go Shopping</label>
             <input class="item__input input task" value="Go Shopping" type="text">
 
-            <button class="button button__edit edit">Save</button>
-            <button class="button button__delete delete">
-              <img src="./remove.svg" alt="">
+            <button class="button button--edit">Save</button>
+            <button class="button button--delete">
+              <img class="button__img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
@@ -73,9 +73,9 @@
             <label class="item__name task">See the Doctor</label>
             <input class="item__input input task" type="text">
 
-            <button class="button button__edit edit">Edit</button>
-            <button class="button button__delete delete">
-              <img src="./remove.svg" alt="">
+            <button class="button button--edit">Edit</button>
+            <button class="button button--delete">
+              <img class="button__img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
