refactor(basic-1.1): add 2 white spaces in html file

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <section class="section section__add">
         <h3 class="section__title">Add Item</h3>
         
-        <div class="block__add-task">
-          <input id="input__new-task" class="input task" type="text">
+        <div class="section__add--input-block">
+          <input id="new-task" class="input task" type="text">
           <button id="button--add" class="button button--add">Add</button>
         </div>
       </section>
@@ -74,7 +74,7 @@
           </li>
         </ul>
       </section>
-      
+
     </main>
 
     <script src="./app.js"></script>
