fix(extended-1.1): update semantic tags

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <button class="button button--edit">Edit</button>
             <button class="button button--delete">
-              <img class="button__img" src="./remove.svg" alt="">
+              <span class="icon"></span>
             </button>
           </li>
 
@@ -52,7 +52,7 @@
 
             <button class="button button--edit">Save</button>
             <button class="button button--delete">
-              <img class="button__img" src="./remove.svg" alt="">
+              <span class="icon"></span>
             </button>
           </li>
         </ul>
@@ -69,7 +69,7 @@
 
             <button class="button button--edit">Edit</button>
             <button class="button button--delete">
-              <img class="button__img" src="./remove.svg" alt="">
+              <span class="icon"></span>
             </button>
           </li>
         </ul>
